add paragraph elements

--- a/shawn.html
+++ b/shawn.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<html lang="eng">
-    <head>
+<html lang="eng" dir="ltr">
+    <head >
         <title>Hellow world</title>
+        <style>
+h1{
+    color:blue;
+    text-align: center;
+}
+p{
+    color: green;
+}
+d{
+    background-color: black;
+    width: 100px;
+    height: 400px;
+}
+        </style>
     </head>
-    <body>
-        <h1>this is a big heading</h1>
-        <p>heloow moringa school</p>
-        <P>a;lskdjflksad</P>
-    </body>
+    <body style=>
+        <div>
+        <h1>HELLOW WORLD</h1>
+        <p>how do yu find your experience in moringa school</p>
+        <ol>
+<li>intresting</li>
+<li>boring</li>
+<li>super fun</li>
+        </ol>
+        <p>how about the tech menters</p>
+<ul>
+    <li>supper fun</li>
+    <li>boring</li>
+    <li>just there being lazry</li>
+</ul>
+<img src="cat.jpg" alt="cat" width="300" height="750">
+<a href="https://google.com">click here</a>
+<p><h4>where is Moringa loacted and what is the distance together with the time one will take</h4></p>
+<table>
+    <thead>
+     <tr>
+        <th>place</th>
+        <th>distance</th>
+        <th>time</th>
+        </tr>
+    </thead>
+<tbody>
+    <tr>
+        <td>ngong</td>
+        <td>along ngong road</td>
+    </tr>
+    <tr>
+        <td>2 hours</td>
+        <td>4 hours</td>
+    </tr>
+</tbody>
+</table>
+ <center>
+     <p>how old are you<br/>
+        I am 19 years old<i>But i am through with my univecity</i><br/>
+        that wonder full for you.<br/>
+        Which univercity did you go to.<br/>
+        <ol>
+            <li>uon</li>
+            <hr>
+            <li>maseno</li>
+        </ol>
+      I was in uon</p>
+     <p><big>thats so great</big></p>
+ </center>
+<form>
+    <input name="text" type="text" placeholder="Name">
+</form>
+        </div>
+</body>
 </html>
