--- a/pablo-eskobar.html
+++ b/pablo-eskobar.html
@@ -16,9 +16,9 @@
         
     </style>
     <body>
-        <h1 ><i>PABLO ESKOBAR HISTORY</i></h1>
-        <h2><u>HOW HE GREY UP</u></h2>
-        <p>Pablo was born in the city of colombia.<br/>
+        <h1 ><i>PABLO ESCOBAR HISTORY</i></h1>
+        <h2><u>HOW HE GREW UP</u></h2>
+        <p>Pablo was born in the city of Colombia.<br/>
             THE only things pablo loved were<br/>
             <ol>
                 <li>fighting</li>
