--- a/kamila.html
+++ b/kamila.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="eng" dir="ltr">
     <head >
         <title>Hellow world</title>
@@ -17,9 +17,9 @@ d{
 }
         </style>
     </head>
-    <body>
+    <body style=>
         <div>
-        <h1><u>HELLOW WORLD</u></h1>
+        <h1>HELLOW WORLD</h1>
         <p>how do yu find your experience in moringa school</p>
         <ol>
 <li>intresting</li>
@@ -32,7 +32,7 @@ d{
     <li>boring</li>
     <li>just there being lazry</li>
 </ul>
-<img src="cat.jpg" alt="a photo of a cat" width="300" height="750">
+<img src="cat.jpg" alt="cat" width="300" height="750">
 <a href="https://google.com">click here</a>
 <p><h4>where is Moringa loacted and what is the distance together with the time one will take</h4></p>
 <table>
