--- a/kamila.html
+++ b/kamila.html
@@ -56,9 +56,9 @@ d{
 </table>
  <center>
      <p>how old are you<br/>
-        I am 19 years old<i>But i am through with my univecity</i><br/>
+        I am 19 years old<i>But i am through with my university</i><br/>
         that wonder full for you.<br/>
-        Which univercity did you go to.<br/>
+        Which university did you go to.<br/>
         <ol>
             <li>uon</li>
             <hr>
