--- a/kamila.html
+++ b/kamila.html
@@ -65,11 +65,12 @@ d{
             <li>maseno</li>
         </ol>
       I was in uon</p>
-     <p><big>thats so great</big></p>
- </center>
-<form>
-    <input name="text" type="text" placeholder="Name">
-</form>
+     <p><big>thats so great</big>
         </div>
 </body>
 </html> 
+</p>
+ 
+<form>
+    <input name="text" type="text" placeholder="Name">
+</form>
