--- a/pablo-eskobar.html
+++ b/pablo-eskobar.html
@@ -5,7 +5,7 @@
     </head>
     <style>
         body{
-            background-color: chocolate;
+            background-color:black;
 
 
         }
