--- a/kamila.html
+++ b/kamila.html
@@ -3,6 +3,10 @@
     <head >
         <title>Hellow world</title>
         <style>
+body{
+    background-color: black;
+}
+}
 h1{
     color:blue;
     text-align: center;
@@ -32,8 +36,9 @@ d{
     <li>boring</li>
     <li>just there being lazry</li>
 </ul>
-<img src="cat.jpg" alt="cat" width="300" height="750">
-<a href="https://google.com">click here</a>
+<img src="boondoks.jpg" alt="this is a pic">
+<img src="" alt="">
+<a href="https:// boondoks.jpg">click here</a>
 <p><h4>where is Moringa loacted and what is the distance together with the time one will take</h4></p>
 <table>
     <thead>
