--- a/moringa.html
+++ b/moringa.html
@@ -3,6 +3,9 @@
     <head >
         <title>Hellow world</title>
         <style>
+            body{
+                background-color: black;
+            }
 h1{
     color:blue;
     text-align: center;
@@ -10,16 +13,24 @@ h1{
 p{
     color: green;
 }
-d{
-    background-color: black;
-    width: 100px;
-    height: 400px;
+li{
+    color:whitesmoke;
 }
+input{
+    background-color: sienna;
+    text-align: left;
+}
+u{
+    color:blue;
+
+}
+
+
         </style>
     </head>
     <body style=>
         <div>
-        <h1>HELLOW WORLD</h1>
+        <h1><u>HELLOW WORLD</u></h1>
         <p>how do yu find your experience in moringa school</p>
         <ol>
 <li>intresting</li>
@@ -32,7 +43,8 @@ d{
     <li>boring</li>
     <li>just there being lazry</li>
 </ul>
-<img src="cat.jpg" alt="cat" width="300" height="750">
+<img src="boondoks.jpg" alt="this is boondoks">
+<img src="images/boondoks.jpg" alt="this is boondoks">
 <a href="https://google.com">click here</a>
 <p><h4>where is Moringa loacted and what is the distance together with the time one will take</h4></p>
 <table>
@@ -54,19 +66,16 @@ d{
     </tr>
 </tbody>
 </table>
- <center>
-     <p>how old are you<br/>
-        I am 19 years old<i>But i am through with my univecity</i><br/>
+     <p>How old are you<br/>
+        I am 19 years old<small>But i am through with my univesity</small><br/>
         that wonder full for you.<br/>
-        Which univercity did you go to.<br/>
+        Which university did you go to?<br/>
         <ol>
             <li>uon</li>
-            <hr>
             <li>maseno</li>
         </ol>
-      I was in uon</p>
-     <p><big>thats so great</big></p>
- </center>
+     <p>I was in uon</p>
+     <p><i>thats so great</i></p>
 <form>
     <input name="text" type="text" placeholder="Name">
 </form>
