--- a/dad.html
+++ b/dad.html
@@ -23,5 +23,6 @@ p{
         <h1><u>My Dad</u></h1>
         <h2><i>This is the story of my Dad</i></h2>
         <p>this is my Dad</p>
+        <p>he is smart</p>
     </body>
 </html>
